main.tf
provider "aws" {
    region = var.aws_region
}

resource "aws_vpc" "main" {
  cidr_block           = var.vpc_cidr
  enable_dns_support   = true
  enable_dns_hostnames = true

  tags = {
    Name = var.vpc_name
  }
}

resource "aws_internet_gateway" "igw" {
    vpc_id = aws_vpc.main.id
    tags = {
      "Name" = "${var.vpc_name}-igw"
    }
}

resource "aws_subnet" "public" {
    vpc_id = aws_vpc.main.id
    cidr_block = var.public_subnet_cidr
    map_public_ip_on_launch = true
    availability_zone = var.az
    tags = {
        Name = "${var.vpc_name}-public"
    }
}

resource "aws_subnet" "private-app" {
    vpc_id = aws_vpc.main.id
    cidr_block = var.private_app_subnet_cidr
    availability_zone = var.az
    tags = {
        Name = "${var.vpc_name}-private-app"
    }
}

resource "aws_subnet" "private-db" {
    vpc_id = aws_vpc.main.id
    cidr_block = var.private_db_subnet_cidr
    availability_zone = var.az
    tags = {
        Name = "${var.vpc_name}-private-db"
    }
}

# -----------------------------------------------------------
# NAT gateway
resource "aws_eip" "nat_eip" {
  tags = {
    Name = "${var.vpc_name}-nat-eip"
  }
}

resource "aws_nat_gateway" "ngw" {
  allocation_id = aws_eip.nat_eip.id
  subnet_id     = aws_subnet.public.id  # 퍼블릭 서브넷 ID

  tags = {
    Name = "${var.vpc_name}-ngw"
  }
}

# -----------------------------------------------------------
# routing table
resource "aws_route_table" "public" {
  vpc_id = aws_vpc.main.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.igw.id
  }

  tags = {
    Name = "${var.vpc_name}-public-rtb"
  }
}

resource "aws_route_table_association" "public" {
  subnet_id = aws_subnet.public.id
  route_table_id = aws_route_table.public.id
}

# ---------------------------------------------------
resource "aws_route_table" "private" {
  vpc_id = aws_vpc.main.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_nat_gateway.ngw.id
  }

  tags = {
    Name = "${var.vpc_name}-private-rtb"
  }
}

resource "aws_route_table_association" "private-app" {
  subnet_id = aws_subnet.private-app.id
  route_table_id = aws_route_table.private.id
}

resource "aws_route_table_association" "private-db" {
  subnet_id = aws_subnet.private-db.id
  route_table_id = aws_route_table.private.id
}
